--- a/requestbinapp/src/App.css
+++ b/requestbinapp/src/App.css
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -44,12 +47,13 @@
 li {
   list-style-type: none;
 }
- 
-.GET > .button {
+
+.GET>.button {
   background-color: rgb(235, 239, 241);
   margin: 1%;
 }
-.POST > .button {
+
+.POST>.button {
   background-color: rgb(254, 254, 255);
   margin: 1%;
 }
@@ -66,6 +70,7 @@ li {
   border-width: 1%;
   margin: 2%;
 }
+
 .request.POST {
   background-color: rgb(184, 213, 246);
   border-style: solid;
@@ -76,4 +81,27 @@ li {
 .method {
   border-bottom: solid;
   border-width: 1%;
+}
+
+@media (prefers-color-scheme: dark) {
+  .GET>.button {
+    background-color: rgb(3, 16, 22);
+    margin: 1%;
+  }
+    .POST>.button {
+    background-color: rgb(3, 16, 22);
+    margin: 1%;
+  }
+  .request.GET {
+  background-color: rgb(53, 130, 103);
+  border-style: solid;
+  border-width: 1%;
+  margin: 2%;
+}
+  .request.POST {
+  background-color: rgb(56, 123, 200);
+  border-style: solid;
+  border-width: 1%;
+  margin: 2%;
+}
 }
